Avance del home y de productos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apolo Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne">
     <script src="https://kit.fontawesome.com/b6b7c1f0a2.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,9 +15,15 @@
     <header class="menuinicial">
             <i class="logo fa-solid fa-dog">APOLLO ACCESORIOS</i>
             <nav class="opciones">
-                <li class="nosotros">NOSOTROS</li>
-                <li class="productos">PRODUCTOS</li>
-                <li class="noticias">NOTICIAS</li>
+                <li class="nosotros">
+                    <a href="nosotros.html">NOSOTROS</a>
+                </li>
+                <li class="productos">
+                    <a href="productos.html"> PRODUCTOS</a>
+                </li>
+                <li class="noticias">
+                    <a href="noticias.html">NOTICIAS</a>
+                </li>
             </nav>
             <a href="https://www.facebook.com">
                 <i class="face fa-brands fa-facebook"></i>
@@ -32,5 +40,15 @@
         <img src="http://cdn.shopify.com/s/files/1/0044/2489/2534/products/B9EB53E2-6618-4EC1-967E-6C1BBF67A9CC2.jpg?v=1608683399">
         <span class="titulo">APOLLO ACCESORIOS</span>
     </div>
+    <footer>
+        <div class="piedepagina">
+            <nav class="menupie">
+                <li>Condiciones y sevicios</li>
+                <li>Blog</li>
+                <li>Legal</li>
+                <li>Se un revendedor </li>
+            </nav>           
+        </div>
+    </footer>
 </body>
 </html>
