Se terminó la mayor parte de productos e index

--- a/productos.html
+++ b/productos.html
@@ -25,15 +25,70 @@
         <a href="https://www.instagram.com/accesorios_apollo?igshid=YmMyMTA2M2Y=">
             <i class="instagram fa-brands fa-instagram"></i>
         </a>
-</header>
-<section class="seccionTitulo">
-    <span class="tituloProductos"> PRODUCTOS </span>
-</section>
-<section>
-    <article class="grillaProductos">
+    </header>
+    <section class="seccionTitulo">
+            <h1 class="tituloProductos"> PRODUCTOS </h1>
+    </section>
 
-    </article>
-</section>
+    <section class="cuerpoproductos">
+        <div class="grillaProductos" >
+            <div class="item">
+                <img src="/Productos/CristalColgante.jpg" alt="imagen">
+                <h2 class="nombreproducto">COLLAR CRISTAL COLGANTE</h2>
+                <span class="descripcionproducto">Collar con bellisimos cristales simil diamante</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/CorazonAmigo.jpg" alt="corazon">
+                <h2 class="nombreproducto">COLLAR CORAZON 2 MITADES</h2>
+                <span class="descripcionproducto">Collar 2 mitades que se unen.Ideal para compartir con tu pareja</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/Rojinegro.jpg" alt="Rojinegro">
+                <h2 class="nombreproducto">PULSERAS ROJINEGRO</h2>
+                <span class="descripcionproducto">Pulseras Rojinegras </span>
+            </div>
+            <div class="item">
+                <img src="/Productos/LuzInicial.jpg" alt="LuzInicial">
+                <h2 class="nombreproducto">PULSERA INICIAL LUMINOSA</h2>
+                <span class="descripcionproducto">Pulsera minimalista con inicales que brillan en la oscuridad</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/AzulMarino.jpg" alt="AzulMarino">
+                <h2 class="nombreproducto">PULSERAS AZUL MARINO</h2>
+                <span class="descripcionproducto">Pulseras azules con detalles maritimos</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/SolLuna.jpg" alt="SolLuna">
+                <h2 class="nombreproducto">COLLAR SOL Y LUNA</h2>
+                <span class="descripcionproducto">Ideal para compartir con tu opuesto, el collar sol y luna.</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/Multicolor.jpg" alt="Multicolor">
+                <h2 class="nombreproducto">COLLAR MULTICOLOR</h2>
+                <span class="descripcionproducto">Si no sabes que color elegir, el collar multicolor es para vos! </span>
+            </div>
+            <div class="item">
+                <img src="/Productos/Red.jpg" alt="Red">
+                <h2 class="nombreproducto">COLLAR RED PASION</h2>
+                <span class="descripcionproducto">Para los mas apasionados, las pulseras red cuadran perfectas!</span>
+            </div>
+            <div class="item">
+                <img src="/Productos/Nombres.jpg" alt="Nombres">
+                <h2 class="nombreproducto">COLLAR NOMBRES UNIDOS</h2>
+                <span class="descripcionproducto">Para llevar siempre con vos a esa persona especial!</span>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="piedepagina">
+            <nav class="menupie">
+                <li>Condiciones y sevicios</li>
+                <li>Blog</li>
+                <li>Legal</li>
+                <li>Se un revendedor </li>
+            </nav>           
+        </div>
+    </footer>
     
 </body>
 </html>
