--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apolo Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/estilos/menu.css">
+    <link rel="stylesheet" href="/estilos/piedepagina.css">
+    <link rel="stylesheet" href="/estilos/normalizacion.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne">
     <script src="https://kit.fontawesome.com/b6b7c1f0a2.js" crossorigin="anonymous"></script>
