--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos-Apolo Accesorios</title>
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="/estilos/productos.css">
+    <link rel="stylesheet" href="/estilos/menu.css">
+    <link rel="stylesheet" href="/estilos/piedepagina.css">
+    <link rel="stylesheet" href="/estilos/normalizacion.css">
     <script src="https://kit.fontawesome.com/b6b7c1f0a2.js" crossorigin="anonymous"></script>
 </head>
 <body>
